--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,6 +4,8 @@
     padding-top: 45px;
     border-bottom: 1px solid rgb(84, 84, 84, .7);
     height: 74px;
+    display: flex;
+    justify-content: space-between;
 }
 
 @media screen and (max-width: 767px) {
