--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,10 @@
 
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__logo/header__logo.css');
+@import url('../blocks/header/__authorization/header__authorization.css');
+@import url('../blocks/header/__email/header__email.css');
+@import url('../blocks/header/__out/header__out.css');
+@import url('../blocks/header/__inside/header__inside.css');
 
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/profile/__avatar/profile__avatar.css');
@@ -38,6 +42,7 @@
 @import url('../blocks/popup/popup.css');
 @import url('../blocks/popup/_opened/popup_opened.css');
 @import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__container/_info/popup__container_info.css');
 @import url('../blocks/popup/__form/popup__form.css');
 @import url('../blocks/popup/__submit-button/popup__submit-button.css');
 @import url('../blocks/popup/__heading/popup__heading.css');
@@ -52,4 +57,15 @@
 @import url('../blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css');
 @import url('../blocks/popup/__input-error/popup__input-error.css');
 @import url('../blocks/popup/__input-error/_active/popup__input-error_active.css');
+@import url('../blocks/popup/__check/popup__check.css');
+@import url('../blocks/popup/__img-check/popup__img-check.css');
+@import url('../blocks/popup/__text/popup__text.css');
+
+@import url('../blocks/authorization/authorization.css');
+@import url('../blocks/authorization/__form/authorization__form.css');
+@import url('../blocks/authorization/__heading/authorization__heading.css');
+@import url('../blocks/authorization/__input/authorization__input.css');
+@import url('../blocks/authorization/__submit-button/authorization__submit-button.css');
+@import url('../blocks/authorization/__text/authorization__text.css');
+@import url('../blocks/authorization/__text/_link/authorization__text_link.css');
 
