--- a/src/blocks/header/__out/header__out.css
+++ b/src/blocks/header/__out/header__out.css
@@ -4,4 +4,11 @@
     line-height: 22px;
     color: #A9A9A9;
     text-decoration: none;
+    background-color: black;
+    transition: opacity .3s;
+    cursor: pointer;
+}
+
+.profile__edit-button:hover {
+    opacity: .6;
 }
