--- a/src/blocks/header/__out/header__out.css
+++ b/src/blocks/header/__out/header__out.css
@@ -3,10 +3,11 @@
     font-size: 18px;
     line-height: 22px;
     color: #A9A9A9;
-    text-decoration: none;
     background-color: black;
     transition: opacity .3s;
     cursor: pointer;
+    border: 0;
+    padding: 0;
 }
 
 .profile__edit-button:hover {
